Incremental checkin. Refactor and bug fix

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <tic-tac-toe></tic-tac-toe>
-    <script type="module" src="uielements.js" defer></script>
+    <script type="module" src="./app/tictactoe.js" defer></script>
 </body>
 
 </html>
